@@ -11,6 +11,8 @@
 VERSION 5.6.18 (August 24, 2006)
 ================================
 
+  * FIXED: Source-level debugger for a --> { x }, !, y.
+
   * FIXED: write_canonical(a|b).  Lukas Degener.
 
   * ADDED: Support for large integers in succ/2, plus/3 and between/3.
